--- a/api/package.json
+++ b/api/package.json
@@ -9,5 +9,8 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241106.0",
     "wrangler": "^3.87.0"
+  },
+  "dependencies": {
+    "@neondatabase/serverless": "^1.0.1"
   }
 }
