--- a/api/wrangler.toml
+++ b/api/wrangler.toml
@@ -1,14 +1,6 @@
-name = "api"
+name = "prdev-api"
 main = "src/index.ts"
 compatibility_date = "2024-01-01"
 
 [vars]
-# Add your environment variables here
-
-[[kv_namespaces]]
-# binding = "MY_KV_NAMESPACE"
-# id = "your-kv-namespace-id"
-
-[[r2_buckets]]
-# binding = "MY_R2_BUCKET"
-# bucket_name = "your-r2-bucket-name"
+DATABASE_URL = "postgresql://neondb_owner:npg_TyUwD9QYJE2M@ep-falling-mouse-a1t30svd-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
